@startuml FastBite_State_Order
title FastBite - Estados de Encomenda (OrderStatus)

skinparam shadowing false

[*] --> PENDING : cliente conclui checkout\ne a encomenda aguarda pagamento/estafeta

PENDING --> COURIER_ASSIGNED : estafeta aceita a entrega\ne fica associado à encomenda
PENDING --> CANCELLED : cliente cancela ou o sistema anula\nantes da confirmação por falta de estafeta

COURIER_ASSIGNED --> CONFIRMED : restaurante aceita o pedido\ncom estafeta já atribuído
COURIER_ASSIGNED --> CANCELLED : restaurante rejeita ou pedido é cancelado\nantes de iniciar preparação

CONFIRMED --> PREPARING : restaurante inicia a preparação\napós aceitar o pedido
CONFIRMED --> CANCELLED : restaurante rejeita ou o pedido é cancelado\npor indisponibilidade/falha

PREPARING --> READY : cozinha termina a preparação\ne o pedido fica pronto para recolha
PREPARING --> CANCELLED : pedido falha durante a preparação\nou é cancelado

READY --> OUT_FOR_DELIVERY : estafeta recolhe e segue\npara a morada do cliente
READY --> CANCELLED : pedido pronto deixa de poder ser entregue\npor cancelamento/falha

OUT_FOR_DELIVERY --> DELIVERED : estafeta confirma entrega\njunto do cliente
OUT_FOR_DELIVERY --> CANCELLED : entrega falha e o sistema\ncancela a encomenda

DELIVERED --> [*]
CANCELLED --> [*]

@enduml
